[gd_scene load_steps=7 format=3 uid="uid://b1gvpl3oxt31c"]

[ext_resource type="Script" path="res://player_manager.gd" id="1_5icx1"]
[ext_resource type="Script" path="res://main.gd" id="1_tkpq6"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_83n81"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_syubo"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_28oc4"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hws1a"]
normal = Vector2(-1, 0)

[node name="Main" type="Node"]
script = ExtResource("1_tkpq6")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("1_5icx1")

[node name="FPS" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="WallTop" type="CollisionShape2D" parent="Walls"]
shape = SubResource("WorldBoundaryShape2D_83n81")

[node name="WallLeft" type="CollisionShape2D" parent="Walls"]
shape = SubResource("WorldBoundaryShape2D_syubo")

[node name="WallBottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(1152, 648)
shape = SubResource("WorldBoundaryShape2D_28oc4")

[node name="WallRight" type="CollisionShape2D" parent="Walls"]
position = Vector2(1152, 0)
shape = SubResource("WorldBoundaryShape2D_hws1a")
